--- a/WebBack/package.json
+++ b/WebBack/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -17,5 +17,8 @@
     "multer": "^2.0.0",
     "paseto": "^3.1.4",
     "pg": "^8.16.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
