--- a/WebBack/package.json
+++ b/WebBack/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "argon2": "^0.43.0",
     "cors": "^2.8.5",
+    "csv-parse": "^5.6.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.0",
     "paseto": "^3.1.4",
     "pg": "^8.16.0"
