--- a/WebInterface/package.json
+++ b/WebInterface/package.json
@@ -8,6 +8,11 @@
     "build": "vite build",
     "preview": "vite preview",
     "test:unit": "vitest",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest --watch",
     "format": "prettier --write src/"
   },
   "dependencies": {
@@ -19,8 +24,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
+    "@vitest/ui": "^3.1.4",
     "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.21",
+    "c8": "^8.0.1",
     "jsdom": "^26.0.0",
     "postcss": "^8.5.3",
     "prettier": "3.5.3",
